--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "mongoose": "^8.14.1",
+    "mysql2": "^3.14.1",
     "node-cron": "^3.0.3"
   }
 }
